models: drop the input prefix in models directory
This is no longer required as we do not have test models any longer.

--- a/projects/CMakeLists.txt
+++ b/projects/CMakeLists.txt
@@ -207,7 +207,7 @@ include_directories(
 # add all other projects
 #
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/dogen.utility)
-add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/dogen.input_models)
+add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/dogen.models)
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/dogen.dia)
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/dogen.modeling)
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/dogen.external)
