--- a/projects/dogen.models/dia/CMakeLists.txt
+++ b/projects/dogen.models/dia/CMakeLists.txt
@@ -17,7 +17,7 @@
 # Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston,
 # MA 02110-1301, USA.
 set(frontend "dia")
-set(models_dir "${projects_dir}/dogen.input_models/${frontend}")
+set(models_dir "${projects_dir}/dogen.models/${frontend}")
 
 if (DOGEN_KNITTER_EXECUTABLE)
     foreach(model ${models})
@@ -43,19 +43,6 @@ if (DOGEN_KNITTER_EXECUTABLE)
                 benchmark_knit_${target_ext})
         endif()
     endforeach()
-
-    set(target northwind)
-    set(target_ext ${target}.${frontend})
-    set(target_path ${models_dir}/${target_ext})
-    add_custom_target(knit_${target_ext}
-        COMMENT "Knitting ${target_ext} model" VERBATIM
-        WORKING_DIRECTORY ${CMAKE_BINARY_DIR}
-        COMMAND ${DOGEN_KNITTER_EXECUTABLE}
-        --target ${target_path} --output-dir ${projects_dir}/dogen.test_models
-        ${other_options} ${ignore_regexes}
-        --ignore-files-matching-regex .*sql
-        --ignore-files-matching-regex .*-odb.*)
-    add_dependencies(knit_all_${frontend} knit_${target_ext})
 
     if (WITH_BENCHMARKS)
         set(target northwind)
