--- a/projects/CMakeLists.txt
+++ b/projects/CMakeLists.txt
@@ -169,7 +169,7 @@ elseif(CMAKE_CXX_COMPILER_ID MATCHES "MSVC" OR
     endforeach(flag_var)
 
     if(CMAKE_CXX_COMPILER_ID MATCHES "MSVC" AND
-            CMAKE_BUILD_TYPE STREQUAL "Release")
+            CMAKE_BUILD_TYPE MATCHES"Release")
         # For some reason CMake seems to be including the debug
         # version of this library on release builds as well so we
         # need to ignore it. Not adding this to clang-cl as it
