--- a/projects/CMakeLists.txt
+++ b/projects/CMakeLists.txt
@@ -142,7 +142,7 @@ if (CMAKE_COMPILER_IS_GNUCXX OR CMAKE_COMPILER_IS_CLANGXX
             "${CMAKE_EXE_LINKER_FLAGS} -Wl,-enable-stdcall-fixup")
         set(CMAKE_SHARED_LINKER_FLAGS
             "${CMAKE_SHARED_LINKER_FLAGS} -Wl,-enable-stdcall-fixup")
-    elseif(UNIX)
+    elseif(UNIX AND NOT APPLE)
         set(CMAKE_EXE_LINKER_FLAGS
             "${CMAKE_EXE_LINKER_FLAGS} -Wl,-fuse-ld=gold")
         set(CMAKE_SHARED_LINKER_FLAGS
