models: add project name prefix to file names

--- a/projects/CMakeLists.txt
+++ b/projects/CMakeLists.txt
@@ -225,8 +225,8 @@ include_directories(
 #
 # add all other projects
 #
+add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/masd.dogen.models)
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/dogen.utility)
-add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/dogen.models)
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/dogen.dia)
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/dogen.modeling)
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/dogen.external)
