--- a/projects/masd.dogen.models/CMakeLists.txt
+++ b/projects/masd.dogen.models/CMakeLists.txt
@@ -97,22 +97,20 @@ if (DOGEN_KNITTER_EXECUTABLE)
     # set(common_arguments ${common_arguments} "--probe-stats-org-mode")
 
     # main input models
-    set(models dogen.annotations)
-    set(models ${models} dogen.dia)
-    set(models ${models} dogen.formatting)
-    set(models ${models} dogen.options)
-    set(models ${models} dogen.probing)
-    set(models ${models} dogen.external)
-    set(models ${models} dogen.external.dia)
-    set(models ${models} dogen.external.json)
-    set(models ${models} dogen.generation)
-    set(models ${models} dogen.generation.cpp)
-    set(models ${models} dogen.generation.csharp)
-    set(models ${models} dogen.modeling)
-    set(models ${models} dogen.templating)
-    # models that are not yet ready
-    # set(models ${models} pleat)
-    # set(models ${models} dart)
+    set(prefix "masd.dogen")
+    set(models ${prefix}.annotations)
+    set(models ${models} ${prefix}.dia)
+    set(models ${models} ${prefix}.formatting)
+    set(models ${models} ${prefix}.options)
+    set(models ${models} ${prefix}.probing)
+    set(models ${models} ${prefix}.external)
+    set(models ${models} ${prefix}.external.dia)
+    set(models ${models} ${prefix}.external.json)
+    set(models ${models} ${prefix}.generation)
+    set(models ${models} ${prefix}.generation.cpp)
+    set(models ${models} ${prefix}.generation.csharp)
+    set(models ${models} ${prefix}.modeling)
+    set(models ${models} ${prefix}.templating)
 endif()
 
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/dia)
