knitter: manual updates with new project prefix

--- a/projects/CMakeLists.txt
+++ b/projects/CMakeLists.txt
@@ -216,12 +216,11 @@ include_directories(
     ${CMAKE_SOURCE_DIR}/projects/masd.dogen.modeling/include
     ${CMAKE_SOURCE_DIR}/projects/masd.dogen.templating/include
     ${CMAKE_SOURCE_DIR}/projects/masd.dogen.generation/include
+    ${CMAKE_SOURCE_DIR}/projects/masd.dogen.knitter/include
 
     ${CMAKE_SOURCE_DIR}/projects/dogen.generation.cpp/include
     ${CMAKE_SOURCE_DIR}/projects/dogen.generation.csharp/include
-    ${CMAKE_SOURCE_DIR}/projects/dogen.knitter/include
     ${CMAKE_SOURCE_DIR}/projects/dogen.tailor/include
-
     )
 
 #
@@ -240,8 +239,8 @@ add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/masd.dogen.external.json)
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/masd.dogen.modeling)
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/masd.dogen.templating)
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/masd.dogen.generation)
+add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/masd.dogen.knitter)
 
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/dogen.generation.cpp)
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/dogen.generation.csharp)
-add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/dogen.knitter)
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/dogen.tailor)
