--- a/projects/CMakeLists.txt
+++ b/projects/CMakeLists.txt
@@ -217,10 +217,10 @@ include_directories(
     ${CMAKE_SOURCE_DIR}/projects/masd.dogen.templating/include
     ${CMAKE_SOURCE_DIR}/projects/masd.dogen.generation/include
     ${CMAKE_SOURCE_DIR}/projects/masd.dogen.knitter/include
+    ${CMAKE_SOURCE_DIR}/projects/masd.dogen.tailor/include
 
     ${CMAKE_SOURCE_DIR}/projects/dogen.generation.cpp/include
     ${CMAKE_SOURCE_DIR}/projects/dogen.generation.csharp/include
-    ${CMAKE_SOURCE_DIR}/projects/dogen.tailor/include
     )
 
 #
@@ -240,7 +240,7 @@ add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/masd.dogen.modeling)
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/masd.dogen.templating)
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/masd.dogen.generation)
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/masd.dogen.knitter)
+add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/masd.dogen.tailor)
 
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/dogen.generation.cpp)
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/dogen.generation.csharp)
-add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/dogen.tailor)
