cli: remove serialisation support

--- a/projects/masd.dogen.cli/CMakeLists.txt
+++ b/projects/masd.dogen.cli/CMakeLists.txt
@@ -18,10 +18,9 @@
 # MA 02110-1301, USA.
 #
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src)
-add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/tests)
 
 install(
-    DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/include/
+    DIRECTORY include/
     DESTINATION include/
     COMPONENT headers
     FILES_MATCHING PATTERN "*.hpp")
