--- a/projects/masd.dogen.cli/src/CMakeLists.txt
+++ b/projects/masd.dogen.cli/src/CMakeLists.txt
@@ -17,13 +17,55 @@
 # Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston,
 # MA 02110-1301, USA.
 #
+set(name "masd.dogen.cli")
+set(lib_binary_name ${name})
+set(lib_target_name ${name}.lib)
+
 set(files "")
 file(GLOB_RECURSE files RELATIVE
     "${CMAKE_CURRENT_SOURCE_DIR}/"
     "${CMAKE_CURRENT_SOURCE_DIR}/*.cpp")
 
-add_library(masd_dogen_cli STATIC ${files})
-set_target_properties(masd_dogen_cli PROPERTIES
-    OUTPUT_NAME masd_dogen_cli)
+set(lib_files ${files})
+list(FILTER lib_files EXCLUDE REGEX "main.cpp")
 
-install(TARGETS masd_dogen_cli ARCHIVE DESTINATION lib COMPONENT libraries)
+add_library(${lib_target_name} STATIC ${lib_files})
+set_target_properties(${lib_target_name} PROPERTIES
+    OUTPUT_NAME ${lib_binary_name})
+
+target_link_libraries(${lib_target_name}
+    masd.dogen.lib
+    ${Boost_LIBRARIES})
+
+install(TARGETS ${lib_target_name} ARCHIVE DESTINATION lib COMPONENT libraries)
+
+set(exe_binary_name ${name})
+set(exe_target_name ${name}.exe)
+
+set(exe_files ${files})
+message(STATUS "${exe_files}")
+list(FILTER exe_files INCLUDE REGEX "main.cpp")
+message(STATUS "${exe_files}")
+
+add_executable(${exe_target_name} ${exe_files})
+set_target_properties(${exe_target_name} PROPERTIES
+    OUTPUT_NAME ${exe_binary_name})
+
+target_link_libraries(${exe_target_name}
+    ${lib_target_name}
+    utility
+    options
+    dia
+    formatting
+    external
+    external.json
+    external.dia
+    modeling
+    generation.cpp
+    generation.csharp
+    ${LIBXML2_LIBRARIES}
+    ${Boost_LIBRARIES})
+
+install(TARGETS ${exe_target_name}
+    RUNTIME DESTINATION bin
+    COMPONENT applications)
