--- a/projects/masd.dogen.external/src/CMakeLists.txt
+++ b/projects/masd.dogen.external/src/CMakeLists.txt
@@ -27,7 +27,7 @@ file(GLOB_RECURSE files RELATIVE
 add_library(${name} STATIC ${files})
 set_target_properties(${name} PROPERTIES OUTPUT_NAME ${binary_name})
 set_target_properties(${name}
-  PROPERTIES VERSION ${DOGEN_VERSION} SOVERSION ${DOGEN_MAJOR_VERSION})
+  PROPERTIES VERSION ${DOGEN_VERSION} SOVERSION ${DOGEN_VERSION_MAJOR})
 
 target_link_libraries(${name} utility formatting ${Boost_LIBRARIES})
 
