--- a/projects/masd.dogen.generation/src/CMakeLists.txt
+++ b/projects/masd.dogen.generation/src/CMakeLists.txt
@@ -34,6 +34,6 @@ target_link_libraries(${name}
 
 set_target_properties(${name} PROPERTIES OUTPUT_NAME ${binary_name})
 set_target_properties(${name}
-    PROPERTIES VERSION ${DOGEN_VERSION} SOVERSION ${DOGEN_MAJOR_VERSION})
+    PROPERTIES VERSION ${DOGEN_VERSION} SOVERSION ${DOGEN_VERSION_MAJOR})
 
 install(TARGETS ${name} ARCHIVE DESTINATION lib COMPONENT libraries)
