--- a/projects/masd.dogen.options/src/CMakeLists.txt
+++ b/projects/masd.dogen.options/src/CMakeLists.txt
@@ -27,6 +27,6 @@ file(GLOB_RECURSE files RELATIVE
 add_library(${name} STATIC ${files})
 set_target_properties(${name} PROPERTIES OUTPUT_NAME ${binary_name})
 set_target_properties(${name}
-    PROPERTIES VERSION ${DOGEN_VERSION} SOVERSION ${DOGEN_MAJOR_VERSION})
+    PROPERTIES VERSION ${DOGEN_VERSION} SOVERSION ${DOGEN_VERSION_MAJOR})
 
 install(TARGETS ${name} ARCHIVE DESTINATION lib COMPONENT libraries)
