models: rename external to injectors

--- a/projects/masd.dogen.models/CMakeLists.txt
+++ b/projects/masd.dogen.models/CMakeLists.txt
@@ -105,9 +105,9 @@ if (DOGEN_KNITTER_EXECUTABLE)
     set(models ${models} ${prefix}.formatting)
     set(models ${models} ${prefix}.options)
     set(models ${models} ${prefix}.probing)
-    set(models ${models} ${prefix}.external)
-    set(models ${models} ${prefix}.external.dia)
-    set(models ${models} ${prefix}.external.json)
+    set(models ${models} ${prefix}.injection)
+    set(models ${models} ${prefix}.injection.dia)
+    set(models ${models} ${prefix}.injection.json)
     set(models ${models} ${prefix}.generation)
     set(models ${models} ${prefix}.generation.cpp)
     set(models ${models} ${prefix}.generation.csharp)
