--- a/projects/masd.dogen.injection/src/CMakeLists.txt
+++ b/projects/masd.dogen.injection/src/CMakeLists.txt
@@ -17,7 +17,7 @@
 # Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston,
 # MA 02110-1301, USA.
 #
-set(name "masd.dogen.external")
+set(name "masd.dogen.injection")
 set(lib_binary_name ${name})
 set(lib_target_name ${name}.lib)
 
@@ -35,7 +35,6 @@ set_target_properties(${lib_target_name}
 
 target_link_libraries(${lib_target_name}
     masd.dogen.utility.lib
-    masd.dogen.formatting.lib
     ${Boost_LIBRARIES})
 
 install(TARGETS ${lib_target_name} ARCHIVE DESTINATION lib COMPONENT libraries)
