--- a/projects/masd.dogen.injection.json/tests/CMakeLists.txt
+++ b/projects/masd.dogen.injection.json/tests/CMakeLists.txt
@@ -17,7 +17,7 @@
 # Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston,
 # MA 02110-1301, USA.
 #
-set(name "masd.dogen.external.json")
+set(name "masd.dogen.injection.json")
 set(lib_target_name ${name}.lib)
 set(tests_binary_name ${name}.tests)
 set(tests_target_name ${name}.tests)
@@ -37,7 +37,7 @@ target_link_libraries(${tests_target_name}
     ${lib_target_name}
     masd.dogen.utility.lib
     masd.dogen.annotations.lib
-    masd.dogen.external.lib
+    masd.dogen.injection.lib
     ${LIBXML2_LIBRARIES}
     ${CMAKE_REQUIRED_LIBRARIES}
     ${Boost_LIBRARIES})
