injection: assorted fixes for injection rename

--- a/projects/masd.dogen.modeling/tests/CMakeLists.txt
+++ b/projects/masd.dogen.modeling/tests/CMakeLists.txt
@@ -40,9 +40,9 @@ target_link_libraries(${tests_target_name}
     masd.dogen.options.lib
     masd.dogen.formatting.lib
     masd.dogen.probing.lib
-    masd.dogen.external.lib
-    masd.dogen.external.dia.lib
-    masd.dogen.external.json.lib
+    masd.dogen.injection.lib
+    masd.dogen.injection.dia.lib
+    masd.dogen.injection.json.lib
     masd.dogen.generation.cpp.lib
     masd.dogen.generation.csharp.lib
     ${LIBXML2_LIBRARIES}
