--- a/projects/masd.dogen.extraction/tests/CMakeLists.txt
+++ b/projects/masd.dogen.extraction/tests/CMakeLists.txt
@@ -17,7 +17,7 @@
 # Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston,
 # MA 02110-1301, USA.
 #
-set(name "masd.dogen.formatting")
+set(name "masd.dogen.extraction")
 set(lib_target_name ${name}.lib)
 set(tests_binary_name ${name}.tests)
 set(tests_target_name ${name}.tests)
