coding: update references to extraction

--- a/projects/masd.dogen.coding/src/CMakeLists.txt
+++ b/projects/masd.dogen.coding/src/CMakeLists.txt
@@ -36,7 +36,7 @@ set_target_properties(${lib_target_name}
 target_link_libraries(${lib_target_name}
     masd.dogen.utility.lib
     masd.dogen.annotations.lib
-    masd.dogen.formatting.lib
+    masd.dogen.extraction.lib
     masd.dogen.probing.lib
     ${LIBXML2_LIBRARIES}
     ${Boost_LIBRARIES})
