--- a/projects/masd.dogen.probing/src/CMakeLists.txt
+++ b/projects/masd.dogen.probing/src/CMakeLists.txt
@@ -35,7 +35,7 @@ set_target_properties(${lib_target_name}
 
 target_link_libraries(${lib_target_name}
     masd.dogen.utility.lib
-    masd.dogen.formatting.lib
+    masd.dogen.extraction.lib
     $<$<CXX_COMPILER_ID:MSVC>:bcrypt>
     ${Boost_LIBRARIES})
 
