tracing: regenerate model

--- a/projects/CMakeLists.txt
+++ b/projects/CMakeLists.txt
@@ -218,7 +218,7 @@ include_directories(
     ${CMAKE_SOURCE_DIR}/projects/masd.dogen.injection/include
     ${CMAKE_SOURCE_DIR}/projects/masd.dogen.injection.dia/include
     ${CMAKE_SOURCE_DIR}/projects/masd.dogen.injection.json/include
-    ${CMAKE_SOURCE_DIR}/projects/masd.dogen.probing/include
+    ${CMAKE_SOURCE_DIR}/projects/masd.dogen.tracing/include
     ${CMAKE_SOURCE_DIR}/projects/masd.dogen.extraction/include
     ${CMAKE_SOURCE_DIR}/projects/masd.dogen.options/include
     ${CMAKE_SOURCE_DIR}/projects/masd.dogen.coding/include
@@ -241,7 +241,7 @@ add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/masd.dogen.dia)
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/masd.dogen.injection)
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/masd.dogen.injection.dia)
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/masd.dogen.injection.json)
-add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/masd.dogen.probing)
+add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/masd.dogen.tracing)
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/masd.dogen.extraction)
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/masd.dogen.options)
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/masd.dogen.coding)
