--- a/projects/masd.dogen.orchestration/src/CMakeLists.txt
+++ b/projects/masd.dogen.orchestration/src/CMakeLists.txt
@@ -48,6 +48,7 @@ target_link_libraries(${lib_target_name}
     masd.dogen.generation.cpp.lib
     masd.dogen.generation.csharp.lib
     ${LIBXML2_LIBRARIES}
-    ${Boost_LIBRARIES})
+    ${Boost_LIBRARIES}
+    ${CMAKE_REQUIRED_LIBRARIES})
 
 install(TARGETS ${lib_target_name} ARCHIVE DESTINATION lib COMPONENT libraries)
