cmake: try to fix clang linking errors

--- a/projects/masd.dogen.knitter/src/CMakeLists.txt
+++ b/projects/masd.dogen.knitter/src/CMakeLists.txt
@@ -63,7 +63,9 @@ target_link_libraries(${exe_target_name}
     masd.dogen.generation.cpp.lib
     masd.dogen.generation.csharp.lib
     ${LIBXML2_LIBRARIES}
-    ${Boost_LIBRARIES})
+    ${Boost_LIBRARIES}
+    ${CMAKE_REQUIRED_LIBRARIES}
+    ${CMAKE_THREAD_LIBS_INIT})
 
 install(TARGETS ${exe_target_name} RUNTIME DESTINATION bin
     COMPONENT applications)
