--- a/.travis.yml
+++ b/.travis.yml
@@ -56,6 +56,13 @@ matrix:
     - os: linux
       compiler: clang
       env: coverage=1 configuration=Debug compiler="clang7" generator="Ninja" build_group="Continuous"
+ exclude:
+    - os: linux
+      compiler: clang
+      env: configuration=Release compiler="clang7" generator="Ninja" build_group="Continuous"
+    - os: linux
+      compiler: clang
+      env: coverage=1 configuration=Debug compiler="clang7" generator="Ninja" build_group="Continuous"
 
 addons:
   apt:
