--- a/projects/CMakeLists.txt
+++ b/projects/CMakeLists.txt
@@ -125,8 +125,12 @@ if (CMAKE_COMPILER_IS_GNUCXX OR CMAKE_COMPILER_IS_CLANGXX
 
     # enable RTTI
     add_definitions(-D_GLIBCXX_USE_CXX11_ABI=1)
-    set(other_flags "${other_flags} -frtti -fvisibility-inlines-hidden")
-    set(other_flags "${other_flags} -fvisibility=hidden")
+    if(APPLE)
+        set(other_flags "${other_flags} -fvisibility=default")
+    else()
+        set(other_flags "${other_flags} -frtti -fvisibility-inlines-hidden")
+        set(other_flags "${other_flags} -fvisibility=hidden")
+    endif()
 
     # set the flags
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${optimisation_flags}")
